# smtp-logger

./: .editorconfig  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish-image.yml  publish-python.yml  publish.yml  test.yml
smtp_logger/: __init__.py
tests/: test_smtp_logger.py
